--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_MOVIES_API_URL=https://api.nomoreparties.co
-REACT_APP_MAIN_API_URL=http://localhost:3001
+REACT_APP_MAIN_API_URL=api.diplom-ts.nomoreparties.sbs
 PORT=3002
